add api endpoints

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionString": {
-    "RedisConnection": "127.0.0.1.6379"
+  "ConnectionStrings": {
+    "DockerRedisConnection": "127.0.0.1:6379"
   }
 }
